@@ -3,12 +3,9 @@
 use strict;
 use warnings;
 
+use Test::DescribeMe qw(author);
 use Test::Most;
 use Test::Needs 'Test::Vars';
 
-if($ENV{'AUTHOR_TESTING'}) {
-	Test::Vars->import();
-	all_vars_ok(ignore_vars => { '$self' => 0 });
-} else {
-	plan(skip_all => 'Author tests not required for installation');
-}
+Test::Vars->import();
+all_vars_ok(ignore_vars => { '$self' => 0 });
