@@ -4,6 +4,7 @@ Revision history for FCGI-Buffer
 	cache_age is now known as cache_duration
 	IO::Compress::Brotli doesn't work on FreeBSD or Arm Linux
 	Set CGI::Info::status() if available
+	Added CircleCI integration
 
 0.19	Fri Sep  1 21:28:40 EDT 2023
 	Fix uninitialisd variable
